unpackaged/main/default/objects/fferpcore__TaxRate__c/fields/fferpcore__StartDate__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>