unpackaged/main/default/objects/fferpcore__TaxRate__c/fields/fferpcore__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxCode__c</fullName>
    <label>Tax Code</label>
    <referenceTo>fferpcore__TaxCode__c</referenceTo>
    <relationshipLabel>Tax Rates</relationshipLabel>
    <relationshipName>Tax_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>