unpackaged/main/default/objects/fferpcore__TaxRate__c/fields/fferpcore__UniquenessConstraint__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__UniquenessConstraint__c</fullName>
    <label>Uniqueness Constraint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>